[tmux] adding pane settings

--- a/tmux/v2_9.tmux.conf
+++ b/tmux/v2_9.tmux.conf
@@ -60,3 +60,7 @@ set -g display-panes-colour colour4						# colors for pane numbers (C-b q)
 set -g display-panes-active-colour colour12				# active color for pane number
 set -g clock-mode-colour colour59						# clock mode color (C-b t)
 set -g clock-mode-style 24								# use 24 hour clock
+
+#~ PANES ~#
+set -g pane-border-lines double
+set -g pane-border-status top
