[tmux] set window status last

--- a/tmux/v2_9.tmux.conf
+++ b/tmux/v2_9.tmux.conf
@@ -47,6 +47,8 @@ set -g window-status-format " #I:#W(#F) "						# window tab format
 set -g window-status-separator ""								# window tab separator
 
 set -g window-status-current-format " #I:#W(#F) "				# window tab format for viewable window
+set -g window-status-style fg=colour15,bg=colour59				# colors for window
+set -g window-status-last-style fg=colour15,bg=colour59			# colors for window
 set -g window-status-current-style fg=colour12,bg=colour4,bold	# colors for viewable window tab
 set -g window-status-activity-style fg=colour15,bg=colour8		# colors for window tab w/ activity tab
 
@@ -62,5 +64,5 @@ set -g clock-mode-colour colour59						# clock mode color (C-b t)
 set -g clock-mode-style 24								# use 24 hour clock
 
 #~ PANES ~#
-set -g pane-border-lines double
-set -g pane-border-status top
+set -g pane-border-lines heavy
+#set -g pane-border-status top
